# frigoloco-web

./: .gitignore  CHECKLIST-FOR-ISMAIL.md  CLAUDE.md  FrigoLoco_Dev_Presentation_V5_Final.pptx  SPEC_LOG.html
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  db.py  main.py  maintenance.py  money.py
backend/app/husky/: __init__.py  archive.py  client.py  normalize.py  schemas.py  sync.py
backend/app/models/: __init__.py  base.py  enums.py  events.py  master.py  operations.py  planning.py  sync.py
backend/app/routers/: __init__.py  alerts.py  app_settings.py  categories.py  clients.py  dispatches.py  finance.py  forecasts.py  fridges.py  husky_sync.py  menus.py  products.py  purchase_orders.py  rating.py  stock.py  suppliers.py  verifications.py
backend/app/schemas/: alerts_settings.py  dispatches.py  finance.py  forecasts.py  husky_sync.py  masters.py  menus.py  orders.py  products.py  rating.py  stock.py  verifications.py
backend/app/services/: dispatch_service.py  finance_service.py  forecast_service.py  menu_allocation_service.py  menu_service.py  orders_service.py  reconciliation_service.py  report_export_service.py  scoring_service.py  stock_service.py
backend/scripts/: apply_migration.py  apply_schema.py
backend/scripts/migrations/: 0002_money_to_cents.sql  0003_enums_to_text.sql  (+5 more)
backend/tests/: test_boot.py  test_finance_routers.py  test_husky_sync.py  test_maintenance.py  test_ops_routers.py  test_reports.py  test_workflow_pipeline.py
cron/: Dockerfile  README.md  pyproject.toml
cron/cron/: __init__.py  scheduler.py
cron/tests/: test_jobs.py
(+128 files in other folders)
