[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frigoloco_backend"
version = "0.1.0"
description = "FrigoLoco Cloud ERP - FastAPI + SQLAlchemy 2.0 backend."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "psycopg2-binary",
    "pydantic-settings",
    "python-dotenv",
    "httpx",
    "tenacity",
    "openpyxl",
    "polars",
    "xlsxwriter",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "respx",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
